# LearningGamesInCpp

./: .gitignore  CMakeLists.txt  README.md  build.js  checkassets.js  clean.js  config.json  db.json  imgui.ini  main.lua  makefile  minify.js  package.json  pe-config.json  scene.json  test.c  test.cpp  test7.json  test7.lua  test7.tmx  tiledmap.js
Editor/: App.cpp  App.h  main.cpp
JS/: Ball.js  Solver.js  index.html  index.js
Plutus/: CMakeLists.txt  makefile
Plutus/Build2/: makefile
Plutus/libs/: CMakeLists.txt
Plutus/libs/box2d/: CMakeLists.txt
Plutus/libs/box2d/include/box2d/: b2_body.h  b2_polygon_shape.h
Plutus/libs/box2d/src/dynamics/: b2_island.cpp
Plutus/libs/freetype/: CMakeLists.txt
Plutus/libs/freetype/include/freetype/config/: ftoption.h
Plutus/libs/freetype/src/base/: ftver.aps
Plutus/libs/freetypegl/: CMakeLists.txt  font-manager.c  font-manager.h  freetype-gl.h  markup.h  opengl.h
Plutus/libs/glad/: CMakeLists.txt
Plutus/libs/glad/include/glad/: glad.h
Plutus/libs/glad/src/: glad.c
Plutus/libs/glfw/src/: glfw_config.h  internal.h
Plutus/libs/lua/: CMakeLists.txt
Plutus/libs/rapidjson/: CMakeLists.txt
Plutus/libs/rapidjson/include/rapidjson/: document.h
Plutus/libs/sol3/: CMakeLists.txt
Plutus/libs/spdlog/: CMakeLists.txt  version.txt
Plutus/libs/stb/: CMakeLists.txt  miniaudio.c  stb_image.h  stb_truetype.h  stb_vorbis.c  stb_vorbis.h
Plutus/pbuild/: makefile
Plutus/src/: Core.cpp  Core.h  IScreen.h  type.h
Plutus/src/Assets/: Asset.h  AssetManager.cpp  AssetManager.h  Assets.h  Audios.cpp  Audios.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  IOManager.h  SceneAsset.cpp  SceneAsset.h  Script.cpp  Script.h  Sound.cpp  Sound.h  SoundEngine.h  SoundLoader.cpp  SoundLoader.h  Texture.cpp  Texture.h  Textures.cpp  Textures.h
Plutus/src/Assets/temp/: Asset.h  AssetManager.cpp  AssetManager.h  Assets.h  Font.cpp  Font.h  Script.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h
Plutus/src/Core/: Core.cpp  Core.h  Engine.cpp  Engine.h  IGameScreen.h  IScreen.h  Project.cpp  Project.h  ScreenList.cpp  ScreenList.h  Window.cpp  Window.h  type.h
Plutus/src/ECS/: Components.h  Entity.cpp  Layer.cpp  Scene.cpp  Scene.h  ScriptServer.cpp  ScriptServer.h
Plutus/src/ECS/Components/: Animate.cpp  Animate.h  Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  PhysicBodyComponent.h  RigidBody.cpp  RigidBody.h  RigidBodyComponent.cpp  RigidBodyComponent.h  Script.cpp  Script.h  ScriptComponent.cpp  ScriptComponent.h  Shapes.h  Sprite.cpp  Sprite.h  SpriteComponent.h  State.h  Tag.h  TagComponent.h  TileMap.cpp  TileMap.h  TileMapComponent.cpp  TileMapComponent.h  Transform.h  TransformComponent.h  Velocity.h  VelocityComponent.h
Plutus/src/Events/: CollisionEvent.h  EventSystem.cpp  EventSystem.h  IEvent.h
Plutus/src/Graphics/: Camera2D.cpp  Camera2D.h  DebugRenderer.cpp  DebugRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GLSL.h  GLUtils.h  GLheaders.h  Graphic.cpp  Graphic.h  GraphicsUtil.cpp  GraphicsUtil.h  IndexBuffer.cpp  IndexBuffer.h  Renderables.h  Shader.cpp  Shader.h  SpriteBatch2D.cpp  SpriteBatch2D.h  vertex.h
Plutus/src/Input/: Input.cpp  Input.h  InputListener.h
Plutus/src/Log/: Logger.cpp  Logger.h
Plutus/src/Math/: LogVec.h  Matrix.cpp  Matrix.h  PMath.cpp  PMath.h  PUtils.cpp  Rect.h  Vec2f.cpp  Vec2i.cpp  Vectors.cpp  Vectors.h
Plutus/src/ParticleSystem/: ParticleBatch.cpp  ParticleBatch.h  ParticleEngine.cpp  ParticleEngine.h
Plutus/src/Physics/: Collider.cpp  Collider.h  IntersectDetector2d.cpp  IntersectDetector2d.h  Line.h  PMath.cpp  PMath.h  PUtils.cpp  PUtils.h  Primitives.h  Shapes.cpp  Shapes.h  Vectors.cpp  Vectors.h
Plutus/src/Physics/Primitives/: Box2d.h
Plutus/src/Physics/RigidBody/: IntersectDetector2d.cpp  IntersectDetector2d.h  Primitives.h  RigidBody2d.h
Plutus/src/Platform/Windows/: FileUtils.cpp  FileUtils.h
Plutus/src/Platform/Windows/Sound/: AudioEvent.cpp  AudioEvent.h  SoundLoader.cpp  SoundLoader.h  SoundManager.cpp  SoundManager.h  types.h
Plutus/src/Serialize/: SceneLoader.cpp  SceneLoader.h  SceneSerializer.cpp  SceneSerializer.h  Serialize.cpp  Serialize.h
Plutus/src/Systems/: AnimationSystem.cpp  AnimationSystem.h  IEventSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  System.h  SystemManager.cpp  SystemManager.h  Systems.h
Plutus/src/Systems/System/: AnimationSystem.cpp  AnimationSystem.h  DebugSystem.cpp  DebugSystem.h  MapShader.h  PhysicSystem.cpp  PhysicSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  System.h  TileMapSystem.cpp  TileMapSystem.h
Plutus/src/Systems/System/EventListener/: ICollisionListener.h
Plutus/src/TextRender/: TextLayer.cpp  TextLayer.h
Plutus/src/Time/: Limiter.cpp  Limiter.h  SleepImp.cpp  SleepImp.h  Timer.cpp  Timer.h
Plutus/src/Utils/: CameraControl.cpp  CameraControl.h  ColorRGBA8.h  FileIO.cpp  FileIO.h  Pointer.h  SoundLoader.cpp  SoundLoader.h  Utils.cpp  Utils.h  types.h
PlutusEditor/: CMakeLists.txt
PlutusEditor/libs/imgui/: CMakeLists.txt
PlutusEditor/libs/imgui2/src/: imconfig.h  imgui.h  imgui_demo.cpp
PlutusEditor/src/: Context.cpp  Context.h  EditorUI.cpp  EditorUI.h  FrameBuffer.cpp  FrameBuffer.h  ImGuiEx.cpp  ImGuiEx.h  ImGuiStyle.h  Modals.h  PickingFrameBuffer.cpp  PickingFrameBuffer.h  Render.cpp  Render.h  TestWin.cpp  TestWin.h  types.h
PlutusEditor/src/Panels/: AnimationPanel.cpp  AnimationPanel.h  AssetsTab.cpp  AssetsTab.h  ComponentPanel.cpp  ComponentPanel.h  EntityEditor.cpp  EntityEditor.h  Panel.h  ScriptEditor.cpp  ScriptEditor.h  TileMapPanel.cpp  TileMapPanel.h
Projects/: MapRender.h  SingleTest.cpp  color.fs  frag.glsl  geoquad.glsl  light.fs  test.cpp  ver.glsl
Test/: App.cpp  App.h  Capsule.cpp  Capsule.h  RigidBody.h  test.cpp
ZombieGame/: ZombieGame.json
ZombiesGame/: ZombiesGame.json
ZombiesGame2/: ZombiesGame2.json
asprite/: child.ase  oldl tv.ase  shield.ase  treashure chest empty.ase  treashure chest full.ase
box2dtest/: App.cpp  App.h  main.cpp
(+307 files in other folders)
